--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+tasks.jar {
+	manifest {
+		attributes["Main-Class"] = "com.glauber.santanderdevbootcamp.SantanderDevBootcampApplication"
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
